tests-system/rbt-signature-string-end-functions-1/output
startswith(c, "po"), warning "b should start with po", b
           ^ rbt-signature-string-end-functions-1/foo.rsl:10: error: expected expression of type Builtin_String, got Builtin_Integer instead
Processed 1 model and 0 requirement files and found 1 error
